fix: Fixes issue #79 with colour value not wrapped in quotes
In _header.scss the colour black was not in quotes.

Webpack and rails preprocessors are more strict than gulps and so it causes an error while parsing

--- a/src/moj/components/header/_header.scss
+++ b/src/moj/components/header/_header.scss
@@ -71,7 +71,7 @@
 
   &:focus {
     border-color: transparent;
-    color: govuk-colour(black);
+    color: govuk-colour("black");
   }
 
   &--organisation-name {
